--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "org.jetbrains.kotlin.kapt"
+    id "com.google.gms.google-services"
 }
 
 android {
@@ -33,14 +35,28 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    implementation platform("com.google.firebase:firebase-bom:32.7.0")
+    implementation "com.google.firebase:firebase-analytics"
+    implementation "com.google.android.gms:play-services-auth:21.2.0"
+    implementation "com.google.firebase:firebase-auth"
+    implementation "com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0"
+    implementation "com.google.api-client:google-api-client:2.0.0"
+    implementation "com.google.api-client:google-api-client-android:1.33.2"
+    implementation "com.google.oauth-client:google-oauth-client-jetty:1.34.1"
+    implementation "com.google.auth:google-auth-library-oauth2-http:1.19.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
