--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id "org.jetbrains.kotlin.kapt"
     id "com.google.gms.google-services"
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -56,6 +57,9 @@ dependencies {
     implementation "com.google.api-client:google-api-client-android:1.32.1"
     implementation "com.google.oauth-client:google-oauth-client-jetty:1.34.1"
     implementation "com.google.auth:google-auth-library-oauth2-http:1.19.0"
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
